# python-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: test_release.yaml
.trunk/: .gitignore  actions  logs  notifications  out  tools  trunk.yaml
.trunk/configs/: .bandit
.trunk/plugins/: trunk
docs/source/: modules.rst  pytemplate.rst  template.rst
pytemplate/: something.py
template/: hello.py
tests/: test_hello.py  test_something.py
