[tool.poetry]
name = "pytemplate"
version = "0.1.3"
description = "A Python template for creating packages."
authors = ["Masum Billal <billalmasum93@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
furo = "^2024.5.6"


[tool.poetry.group.formatting.dependencies]

[tool.mypy]
exclude = [".venv", ".env", "venv", "env", "build", "docs", "dist"]


[tool.bandit]
exclude_dirs = [".venv", "venv", "env", ".tox", "docs", "tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
